es-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ingester-es
  labels:
    app: elasticsearch
spec:
  containers:
  - image: docker.elastic.co/elasticsearch/elasticsearch:7.6.2
    name: elasticsearch
    volumeMounts:
    - name: storage
      mountPath: /data
    ports:
    - containerPort: 9200
      name: http
      protocol: TCP
    - containerPort: 9300
      name: transport
      protocol: TCP
#    livenessProbe:
#      httpGet:
#        path: /
#        port: 9200
  volumes:
  - name: storage
    emptyDir: {}
