ingester-defaultapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ingester-defaultapp
  labels:
    app: ingester-defaultapp
spec:
  containers:
  - image: edswarchitect/default-app
    name: ingester-defaultapp
    ports:
    - containerPort: 1180
      protocol: TCP
