reader-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: reader-persist
  labels:
    app: reader-persist
spec:
  containers:
  - image: edswarchitect/read-persist
    name: reader-persist
    volumeMounts:
    - name: test-persist
      mountPath: /data
      readOnly: true
    ports:
    - containerPort: 8090
      protocol: TCP
  volumes:
  - name: test-persist
    persistentVolumeClaim:
      claimName: toydisk2-pvc
