azure-rw-persist-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-rw-persist-svc
spec:
  type: LoadBalancer
  ports:
  - name: reader-http 
    port: 8090
    targetPort: 8090
  - name: writer-http
    port: 8091
    targetPort: 8091
  selector:
    app: reader-writer-persist
