ingester-configmap-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingester-configmap-svc
spec:
  type: LoadBalancer
  ports:
  - name: http # http defined in pod file
    port: 80
    targetPort: 9080
  selector:
    app: ingester-configmap
