ingester-defaultapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingester-defaultapp-svc
spec:
  type: LoadBalancer
  ports:
  - name: http # http defined in pod file
    port: 80
    targetPort: 1180
  selector:
    app: ingester-defaultapp
